--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -25,7 +25,7 @@
     <div class="intro">
 
         <div align="center" class="slogan">
-          <h1 class="h1">iOSваввавававававава и ANDROID каталоги</h1>
+          <h1 class="h1">iOSваввавававававав пизда и ANDROID каталоги</h1>
           <p class="p1">ваша продукция и услуги в личном мобильном приложении</p>
           <a href="#about" class="button26">Узнать больше</a>
         </div>
