--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -32,7 +32,7 @@
 
           <li>
             <a  (click)="changeSubMenuState()" href='#' class="down" data-scroll>Приложения</a>
-            <ul [ngClass]="{'navbar-hiden':isSubMemuOpen}" class="submenu">
+            <ul [ngClass]="{'navbar-hiden':isSubMemuOpen}" class="submenu container-back">
               <li><a href="#about">Разработка приложения</a></li>
               <li><a href="#works">Примеры приложений</a></li>
             </ul>
