--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -52,9 +52,9 @@
     <div class="intro">
 
         <div align="center" class="slogan">
-          <h1 class="h1">iOSваввававввввввввввввавававав пизда и ANDROID каталоги</h1>
+          <h1 class="h1">iOS и ANDROID каталоги</h1>
           <p class="p1">ваша продукция и услуги в личном мобильном приложении</p>
-          <p class="p1">ваша продукция и услуги в личном мобильном приложении</p>
+
           <a href="#about" class="button26">Узнать больше</a>
         </div>
 
@@ -65,7 +65,7 @@
 <br/>
 <!-- Section: about -->
 <section id="about" class="rrr home-section text-center bg-gray">
-  <div class="heading-about marginbot-50">
+  <div class="heading-about marginbot-50 ">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
@@ -84,9 +84,9 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-xs-6 col-sm-3 col-md-3">
+      <div class="col-xs-6 col-sm-3 col-md-3 mobile-margin">
 
-        <div class="team boxed-grey">
+        <div class="team box-shadow">
           <div class="inner">
             <h5>Дизайн</h5>
             <p class="subtitle">+100 вариантов</p>
@@ -95,31 +95,9 @@
         </div>
 
       </div>
-      <div class="col-xs-6 col-sm-3 col-md-3">
+      <div class="col-xs-6 col-sm-3 col-md-3 mobile-margin">
 
-        <div class="team boxed-grey">
-          <div class="inner">
-            <h5>Наполнение</h5>
-            <p class="subtitle">приложения данными</p>
-            <div class="avatar"><img src="assets/img/develop/2.png" alt="" class="img-responsive"/></div>
-          </div>
-
-        </div>
-      </div>
-      <div class="col-xs-6 col-sm-3 col-md-3">
-
-        <div class="team boxed-grey">
-          <div class="inner">
-            <h5>Публикация</h5>
-            <p class="subtitle">в AppStore, PlayMarket</p>
-            <div class="avatar"><img src="assets/img/develop/3.png" alt="" class="img-responsive"/></div>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-xs-6 col-sm-3 col-md-3">
-
-        <div class="team boxed-grey">
+        <div class="team box-shadow">
           <div class="inner">
             <h5>Приложение</h5>
             <p class="subtitle">можно скачивать</p>
@@ -128,6 +106,30 @@
         </div>
 
       </div>
+
+      <div class="col-xs-6 col-sm-3 col-md-3 mobile-margin">
+
+        <div class="team box-shadow">
+          <div class="inner">
+            <h5>Публикация</h5>
+            <p class="subtitle">в AppStore, PlayMarket</p>
+            <div class="avatar"><img src="assets/img/develop/3.png" alt="" class="img-responsive"/></div>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-xs-6 col-sm-3 col-md-3 mobile-margin">
+
+        <div class="team box-shadow ">
+          <div class="inner">
+            <h5>Наполнение</h5>
+            <p class="subtitle">приложения данными</p>
+            <div class="avatar"><img src="assets/img/develop/2.png" alt="" class="img-responsive"/></div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
@@ -136,15 +138,12 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
 <div class="container">
   <div class="row">
 <!-- Section: services -->
 <section id="service" class="">
-<div style="background-color:#dfdfda ">
+<div class="box-shadow">
   <div class="heading-about marginbot-50">
     <div class="container">
       <div class="row">
@@ -167,8 +166,8 @@
 
       <div class="col-sm-3 col-md-3">
 
-        <div class="service-box">
-          <div  class="service-icon">
+        <div class="service-box box-shadow-in">
+          <div  class="service-icon ">
             <i class="fa fa-code fa-3x"></i>
           </div>
           <div class="service-desc">
@@ -179,10 +178,10 @@
         </div>
 
       </div>
-      <div class="col-sm-3 col-md-3">
+      <div class="col-sm-3 col-md-3 ">
 
-        <div class="service-box">
-          <div class="service-icon">
+        <div class="service-box box-shadow-in">
+          <div class="service-icon ">
             <i class="fa fa-suitcase fa-3x"></i>
           </div>
           <div class="service-desc">
@@ -192,10 +191,10 @@
         </div>
 
       </div>
-      <div class="col-sm-3 col-md-3">
+      <div class="col-sm-3 col-md-3 ">
 
-        <div class="service-box">
-          <div class="service-icon">
+        <div class="service-box  box-shadow-in">
+          <div class="service-icon ">
             <i class="fa fa-cog fa-3x"></i>
           </div>
           <div class="service-desc">
@@ -206,9 +205,9 @@
         </div>
 
       </div>
-      <div class="col-sm-3 col-md-3">
+      <div class="col-sm-3 col-md-3 ">
 
-        <div class="service-box">
+        <div class="service-box box-shadow-in">
           <div class="service-icon">
             <i class="fa fa-rocket fa-3x"></i>
           </div>
@@ -258,60 +257,60 @@
       <div class="col-sm-12 col-md-12 col-lg-12">
 
         <div class="row gallery-item">
-          <div class="col-md-3">
+          <div class="col-md-3 box-shadow-img">
             <a href="http://moko.by/images/clients/1.jpg"
                title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
               <img src="assets/img/clients/1.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 box-shadow-img">
             <a href="http://moko.by/images/clients/2.jpg"
                title="Разработанный мобильный каталог для магазина БЕЛАРУСАЧКА. http://belarusachka.by/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/2.jpg">
               <img src="assets/img/clients/2.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 box-shadow-img">
             <a href="http://moko.by/images/clients/3.jpg"
                title="Разработанный мобильный каталог для магазина IDEAL LUX. http://ideal-lux.by/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/3.jpg">
               <img src="assets/img/clients/3.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 box-shadow-img">
             <a href="http://moko.by/images/clients/4.jpg"
                title="Разработанный мобильный каталог для компании PRIDE-energo. http://pride-energo.by/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/4.jpg">
               <img src="assets/img/clients/4.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
-            <br/>
+          <div class="col-md-3 box-shadow-img">
+
             <a href="http://moko.by/images/clients/5.jpg"
                title="Разработанный мобильный каталог для компании UniTesS . http://unitess.ru/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/5.jpg">
               <img src="assets/img/clients/5.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
-            <br/>
+          <div class="col-md-3 box-shadow-img">
+
             <a href="http://moko.by/images/clients/6.jpg"
                title="Разработанный мобильный каталог для бара LOFT BAR. http://loft-bar.ru/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/6.jpg">
               <img src="assets/img/clients/6.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
-            <br/>
+          <div class="col-md-3 box-shadow-img">
+
             <a href="http://moko.by/images/clients/7.jpg"
                title="Разработанный мобильный каталог для компании VISABEL. http://visabel.com.au/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/7.jpg">
               <img src="assets/img/clients/7.jpg" class="img-responsive" alt="img">
             </a>
           </div>
-          <div class="col-md-3">
-            <br/>
+          <div class="col-md-3 box-shadow-img">
+
             <a href="http://moko.by/images/clients/8.jpg"
                title="Разработанный мобильный каталог для магазина MOKO. http://moko.by/"
                data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/8.jpg">
@@ -350,8 +349,8 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-lg-8 col-md-offset-2">
-        <div class="boxed-grey">
+      <div class="col-lg-8">
+        <div class="box-shadow">
           <form id="contact-form">
             <div class="row">
               <div class="col-md-6">
@@ -378,8 +377,10 @@
                     Тип сообщения</label>
                   <select type="text" class="form-control input" id="name3" type="number" placeholder="Тип сообщения"
                           required="required">
-                    <option>Сообщения 1</option>
-                    <option>Сообщение 2</option>
+                    <option>Заказать приложение</option>
+                    <option>Сотрудничество</option>
+                    <option>Сообщить об ошибке</option>
+                    <option>Другое</option>
                   </select>
                 </div>
               </div>
@@ -415,7 +416,7 @@
           <div class="col-lg-6">
             <address>
               <strong>Email</strong><br>
-              <a href="mailto:#" class="gmail">johnnyrespect.com@gmail.com</a><br/>
+              <a href="mailto:#" class="gmail">mokoserver@gmail.com</a><br/>
             </address>
 
           </div>
