1)Update item-blocks and form-block 2)Add fon-image in mobile vision

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -84,7 +84,9 @@ a.button26:active {
     background-repeat: no-repeat;
     background-image: url("../../assets/img/fon/img-bg.jpg") ;
     }
-
+    .margin-left{
+        margin-left: 18%;
+    }
     .h1{
         font-family: fantasy;
         font-size: 80px;
