--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,4 +1,8 @@
-
+.text-logo{
+    font: 25px 'Verdana';
+    padding:1px 1px 1px 1px;
+    color: #000000;
+}
 .heads{
     font: 14px 'Verdana';
     margin: 0;
@@ -75,11 +79,14 @@ a.button26:active {
 }
 
 @media screen and (min-width: 911px) {
+    .navbar .navbar-header{
+        margin-top: 15px;
+    }
 .intro{
 
     width: 100%;
     height: 700px;
-
+    margin-top: 93px;
     background-size: 100% ;
     background-repeat: no-repeat;
     background-image: url("../../assets/img/fon/img-bg.jpg") ;
@@ -129,6 +136,9 @@ a.button26:active {
     }
 
 }
+.modal-window{
+
+}
 @media screen and (max-width: 911px) {
 
     .your-fucking-block{
@@ -142,7 +152,7 @@ a.button26:active {
         width: 100%;
         height:466px;
         padding-top: 50%;
-
+        margin-top: 78px;
         color:white;
         background-size: 100% ;
         background-repeat: no-repeat;
@@ -153,7 +163,7 @@ a.button26:active {
 
     }
     .navbar-fixed-top .navbar-collapse {
-        max-height: 380px !important;
+        max-height: 455px !important;
     }
     .mobile-margin{
         margin-bottom: 15px;
@@ -273,12 +283,19 @@ a.send_mail:active {
 }
 .navbar-nav > li > a{
     color: rgb(0, 0, 0);
-
+    padding: 15px;
+    font-family:  'Verdana';
 }
-
+.navbar-nav > li > p{
+    font-family:  'Verdana';
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    padding: 3px 15px;
+    margin: 15px 8px;
+}
 .navbar-nav > li {
-
-    padding: 5px;
+font-family:  'Verdana';
+    padding: 14px;
     font-size: 20px;
 }
 .navbar-nav ul{
