--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -108,7 +108,7 @@ a.button26:active {
     .slogan{
 
 
-        padding-top: 18%;
+        padding-top: 240px;
 
     }
 
@@ -151,7 +151,7 @@ a.button26:active {
 
         width: 100%;
         height:466px;
-        padding-top: 50%;
+        padding-top: 150px;
         margin-top: 78px;
         color:white;
         background-size: 100% ;
