--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -258,65 +258,65 @@
             <div class="col-sm-12 col-md-12 col-lg-12">
 
                 <div class="row gallery-item">
-                    <div  [ngClass]="{'modal-window':isModalWindow}" class="col-md-3 box-shadow-img">
-                        <p (click)="ModalWindow()" href=""
+                    <div   class="col-md-3 box-shadow-img">
+                        <a (click)="ModalWindow(1)" href="#win1"
                            title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
                             <img src="assets/img/clients/1.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
-                        <p href="http://moko.by/images/clients/2.jpg"
+                        <a (click)="ModalWindow(2)" href="#win1"
                            title="Разработанный мобильный каталог для магазина БЕЛАРУСАЧКА. http://belarusachka.by/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/2.jpg">
                             <img src="assets/img/clients/2.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
-                        <p href="http://moko.by/images/clients/3.jpg"
+                        <a (click)="ModalWindow(3)" href="#win1"
                            title="Разработанный мобильный каталог для магазина IDEAL LUX. http://ideal-lux.by/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/3.jpg">
                             <img src="assets/img/clients/3.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
-                        <p href="http://moko.by/images/clients/4.jpg"
+                        <a (click)="ModalWindow(4)" href="#win1"
                            title="Разработанный мобильный каталог для компании PRIDE-energo. http://pride-energo.by/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/4.jpg">
                             <img src="assets/img/clients/4.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
 
-                        <p href="http://moko.by/images/clients/5.jpg"
+                        <a (click)="ModalWindow(5)" href="#win1"
                            title="Разработанный мобильный каталог для компании UniTesS . http://unitess.ru/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/5.jpg">
                             <img src="assets/img/clients/5.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
 
-                        <p href="http://moko.by/images/clients/6.jpg"
+                        <a (click)="ModalWindow(6)" href="#win1"
                            title="Разработанный мобильный каталог для бара LOFT BAR. http://loft-bar.ru/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/6.jpg">
                             <img src="assets/img/clients/6.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
 
-                        <p href="http://moko.by/images/clients/7.jpg"
+                        <a (click)="ModalWindow(7)" href="#win1"
                            title="Разработанный мобильный каталог для компании VISABEL. http://visabel.com.au/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/7.jpg">
                             <img src="assets/img/clients/7.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                     <div class="col-md-3 box-shadow-img">
 
-                        <p href="http://moko.by/images/clients/8.jpg"
+                        <a (click)="ModalWindow(8)" href="#win1"
                            title="Разработанный мобильный каталог для магазина MOKO. http://moko.by/"
                            data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/8.jpg">
                             <img src="assets/img/clients/8.jpg" class="img-responsive" alt="img">
-                        </p>
+                        </a>
                     </div>
                 </div>
 
@@ -324,6 +324,58 @@
         </div>
     </div>
 </section>
+<a href="#x" class="overlay" id="win1"></a>
+<div class="popup">
+    <ng-template [ngIf]="modalImage1">
+    <a href="#win1"
+       title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+       data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+        <img src="assets/img/clients/1.jpg" class="img-responsive" alt="img">
+    </a></ng-template>
+    <ng-template [ngIf]="modalImage2">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/2.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <ng-template [ngIf]="modalImage3">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/3.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <ng-template [ngIf]="modalImage4">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/4.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <ng-template [ngIf]="modalImage5">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/5.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <ng-template [ngIf]="modalImage6">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/6.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <ng-template [ngIf]="modalImage7">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/7.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <ng-template [ngIf]="modalImage8">
+        <a href="#win1"
+           title="Разработанный мобильный каталог для компании КПСР-групп. http://kpsr-group.ru/"
+           data-lightbox-gallery="gallery1" data-lightbox-hidpi="http://moko.by/images/clients/1.jpg">
+            <img src="assets/img/clients/8.jpg" class="img-responsive" alt="img">
+        </a></ng-template>
+    <a class="close"title="Закрыть" href="#close"></a>
+</div>
 <!-- /Section: works -->
 <br/>
 <br/>
@@ -428,4 +480,5 @@
 
     </div>
 </section>
+
 
